--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Lista de Juegos Cooperativos</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     <link rel="stylesheet" href="style.css">
+  <script type="module" src="js/firebase.js"></script>
+    <script type="module" src="script.js"></script>
 </head>
 <body>
     <header>
