--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -14,32 +14,31 @@
     </div>
 
     <!-- Modal añadir juego -->
-  <div id="addGameModal" class="modal">
-   <div class="modal-content">
-     <span class="close">&times;</span>
+    <div id="addGameModal" class="modal">
+        <div class="modal-content">
+   <span class="close">&times;</span>
      <h2>Añadir Nuevo Juego</h2>
       <div class="modal-form">
      <div class="form-group">
-<label for="gameUrl">URL del Juego (Steam o Epic Store):</label>
-    <input type="url" id="gameUrl" placeholder="https://store.steampowered.com/app/..." required>
+        <label for="gameUrl">URL del Juego (Steam o Epic Store):</label>
+     <input type="url" id="gameUrl" placeholder="https://store.steampowered.com/app/..." required>
+       </div>
+        <div id="urlError" class="error-message"></div>
+  <button id="addGameBtn">Añadir Juego</button>
   </div>
-      <div id="urlError" class="error-message"></div>
-     <button id="addGameBtn">Añadir Juego</button>
-            </div>
-        </div>
+     </div>
     </div>
 
     <header>
- <h1><i class="fas fa-gamepad"></i> Juegos Coop que quiero probar</h1>
-        <p>Explora esta colecci&oacute;n de aventuras cooperativas que quiero jugar con amigos.</p>
+        <h1><i class="fas fa-gamepad"></i> Juegos Coop que quiero probar</h1>
+    <p>Explora esta colecci&oacute;n de aventuras cooperativas que quiero jugar con amigos.</p>
     </header>
 
     <main id="game-list">
-        <!-- Los juegos se cargarán dinámicamente desde Firebase -->
-    </main>
+   <!-- Los juegos se cargarán dinámicamente desde Firebase -->
+</main>
 
     <script type="module" src="js/firebase.js"></script>
-    <script type="module" src="js/migrateGames.js"></script>
     <script type="module" src="script.js"></script>
 </body>
-</html>
+</html></html>
