--- a/index.html
+++ b/index.html
@@ -15,17 +15,17 @@
 
     <!-- Modal añadir juego -->
     <div id="addGameModal" class="modal">
-        <div class="modal-content">
-            <span class="close">&times;</span>
+  <div class="modal-content">
+<span class="close">&times;</span>
             <h2>Añadir Nuevo Juego</h2>
             <div class="modal-form">
-                <div class="form-group">
-                    <label for="gameUrl">URL del Juego (Steam o Epic Store):</label>
-                    <input type="url" id="gameUrl" placeholder="https://store.steampowered.com/app/..." required>
-                </div>
-                <div id="urlError" class="error-message"></div>
-                <button id="addGameBtn">Añadir Juego</button>
-            </div>
+   <div class="form-group">
+       <label for="gameUrl">URL del Juego (Steam o Epic Store):</label>
+ <input type="url" id="gameUrl" placeholder="https://store.steampowered.com/app/..." required>
+             </div>
+            <div id="urlError" class="error-message"></div>
+         <button id="addGameBtn">Añadir Juego</button>
+</div>
         </div>
     </div>
 
@@ -39,6 +39,6 @@
     </main>
 
     <script type="module" src="js/firebase.js"></script>
-    <script type="module" src="script.js"></script>
+    <script type="module" src="js/script.js"></script>
 </body>
 </html>
