Corregida estructura de archivos y rutas

--- a/index.html
+++ b/index.html
@@ -44,6 +44,6 @@
     </main>
 
     <script type="module" src="js/firebase.js"></script>
-  <script type="module" src="script.js"></script>
+    <script type="module" src="js/script.js"></script>
 </body>
 </html>
